# qt-hires-music-app

./: .gitignore  CMakeLists.txt  Main.qml  audio_decoder.cpp  audio_decoder.h  audio_player.cpp  audio_player.h  audiomanager.cpp  audiomanager.h  main.cpp  playlist_manager.cpp  playlist_manager.h  track.cpp  track.h
components/: ErrorDialog.qml  Header.qml  LoadButtons.qml  LoadingOverlay.qml  PlaybackButtons.qml  PlayerControls.qml  PlaylistView.qml  SeekBar.qml
